# fastapi-template

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
