[tool.poetry]
name = "fastapi-template-app"
version = "0.1.0"
description = "A FastAPI template application"
authors = ["Agustin Curto Strasorier <agustincurtostrasorier@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.2.0"
isort = "^5.12.0"
mypy = "^1.8.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
